# mcd-data-analysis

./: README.md  pyproject.toml
docs/: 01_jss_modulo_1.ipynb
notebooks/: w1_jss_classes.ipynb  w1_jss_modulo1.ipynb
notebooks/my_notebooks/: w1_jss_evaluacion1.ipynb
notebooks/references/: 02_jss_file2.ipynb
